--- a/index.html
+++ b/index.html
@@ -82,22 +82,25 @@
     <script src="js/ie10-viewport-bug-workaround.js"></script>
 
     <!-- AngularJs scripts -->
-    <script src="scripts/app.js?version=1"></script>
+    <script src="scripts/app.js?version=3"></script>
 
-    <script src="scripts/tabs/tabs.module.js?version=1"></script>
-    <script src="scripts/lastcall/lastcall.module.js?version=1"></script>
-    <script src="scripts/params/params.module.js?version=1"></script>
+    <script src="scripts/tabs/tabs.module.js?version=3"></script>
+    <script src="scripts/lastcall/lastcall.module.js?version=3"></script>
+    <script src="scripts/params/params.module.js?version=3"></script>
 
-    <script src="scripts/usage/usage.module.js?version=1"></script>
-    <script src="scripts/usage/usage.search.js?version=1"></script>
-    <script src="scripts/usage/usage.save.js?version=1"></script>
-    <script src="scripts/usage/usage.tags.js?version=1"></script>
+    <script src="scripts/usage/usage.module.js?version=3"></script>
+    <script src="scripts/usage/usage.search.js?version=3"></script>
+    <script src="scripts/usage/usage.save.js?version=3"></script>
+    <script src="scripts/usage/usage.tags.js?version=3"></script>
+    <script src="scripts/usage/usage.groups.js?version=3"></script>
+    <script src="scripts/usage/usage.users.js?version=3"></script>
 
-    <script src="scripts/services/DreamFactoryBeta.js?version=1"></script>
+    <script src="scripts/services/DreamFactoryBeta.js?version=3"></script>
+    <script src="scripts/services/IndexDb.js?version=3"></script>
 
-    <script src="scripts/models/Abstract.js?version=1"></script>
-    <script src="scripts/models/Bookmark.js?version=1"></script>
-    <script src="scripts/models/Tag.js?version=1"></script>
+    <script src="scripts/models/Abstract.js?version=3"></script>
+    <script src="scripts/models/Bookmark.js?version=3"></script>
+    <script src="scripts/models/Tag.js?version=3"></script>
 
   </body>
 </html>
